--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <title>Home</title>
+  <title>Daniel Wyatt - Home</title>
   <meta name="description" content="DevOps Professional, Cloud Engineer, Embedded Enthusiast.">
 
   
