--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <title>Portfolio</title>
+  <title>Daniel Wyatt - Portfolio</title>
   <meta name="description" content="DevOps Professional, Cloud Engineer, Embedded Enthusiast.">
 
   
