--- a/index.html
+++ b/index.html
@@ -130,7 +130,8 @@
       var options = {
         carousel:     false,
         closeOnClick: true,
-        nextOnClick:  false
+        nextOnClick:  false,
+        animation:    false
       };
       var lightbox = new Lightbox();
       lightbox.load(options);
