--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@ title: Home
   <h1>I write software</h1>
   <p>From distributed web applications to low-level device drivers and firmware, I write all kinds of software.</p>
   <h1>I'm cross-platform</h1>
-  <p>I prefer Linux but have extensive experience in many versions of Windows and some BSD-derivatives.</p>
+  <p>I love Linux but also have extensive experience in many versions of Windows and some BSD-derivatives.</p>
   <h1>I'm available</h1>
-  <p>I am currently available to work in the Linux/DevOps space.</p>
+  <p>I am currently available to work on interesting projects.</p>
 
  <h2><div style="text-align: center; margin-top: 1.2em"><a href="/assets/DanielWyattResume.pdf" class="view-my-resume">View My Resume</a></div></h2>
 
